skip google analytics on localhost

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,11 +5,12 @@
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XQXQG6TF3G"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'G-XQXQG6TF3G');
+		if (location.hostname !== 'localhost') {
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+			gtag('config', 'G-XQXQG6TF3G');
+		}
 	</script>
 	<title>Did you hear about this job?</title>
 	<meta charset="utf-8">
