add job search form

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -84,7 +84,7 @@
 			<webui-alerts title="View your notifications" data-title="My Alerts" data-toggleclass=".shared|open"></webui-alerts>
 			<webui-myfi-info>
 				<template slot="panel-content">
-					<webui-alert show variant="info">Example Account Panel</webui-alert>
+					<webui-alert show variant="info">Coming Soon</webui-alert>
 				</template>
 			</webui-myfi-info>
 		</header>
