--- a/webapp/index.html
+++ b/webapp/index.html
@@ -67,7 +67,7 @@
 	<webui-app data-removeclass=".nav|open;.shared|open">
 		<webui-drawer slot="left" class="nav elevation-20" docked="true" data-state="slot|docked" data-moveable data-dockable>
 			<webui-flex justify="center" slot="header">
-				<webui-stoic-dreams-logo title="Did You Hear About This Job Logo" text="DyHaTJ"></webui-stoic-dreams-logo>
+				<webui-stoic-dreams-logo title="Did You Hear About This Job Logo" text="DyHaT" text2="Job"></webui-stoic-dreams-logo>
 			</webui-flex>
 			<webui-nav routes="/nav.json" data-subscribe="app-nav-routes:setNavRoutes"></webui-nav>
 		</webui-drawer>
